--- a/Inicio.html
+++ b/Inicio.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="Inicio.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="tareas.html">Tareas</a>
@@ -41,16 +41,7 @@
     </header>
 
     <main>
-        <ul class="list-group" id="manageDom">
-            <li class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
-                <label class="form-check-label" for="firstCheckbox">First checkbox</label>
-            </li>
-        </ul>
-        <form action="" id="formularioTarea">
-            <input type="text" name="tarea" id="tareaNueva" placeholder="Ingrese una tarea" required>
-            <button type="submit" id="agregar" class="agregarBoton">Agregar</button>
-        </form>
+        
     </main>
 
     <footer>
