Se sube LAB toDo con Bootstrap

--- a/tareas.html
+++ b/tareas.html
@@ -42,7 +42,11 @@
 
     <main>
         <ul class="list-group" id="manageDom">
-
+          <!--  <li class="list-group-item">
+                <input class="form-check-input me-1" id="1CheckBox" type="checkbox" name="check">
+                <label class="form-check-label" for="1CheckBox">KHASJD</label>
+            </li>
+            -->
         </ul>
         <form action="" id="formularioTarea">
             <div class="input-group">
@@ -59,7 +63,9 @@
                 <a class="navbar-brand" href="#">Luis Villada</a>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link" href="#">LinkedIn</a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/luisvilladadev
+
+">LinkedIn</a>
                         <a class="nav-link" href="#">GitHub</a>
                     </div>
                 </div>
