--- a/tareas.html
+++ b/tareas.html
@@ -66,7 +66,7 @@
                         <a class="nav-link" href="https://www.linkedin.com/in/luisvilladadev
 
 ">LinkedIn</a>
-                        <a class="nav-link" href="#">GitHub</a>
+                        <a class="nav-link" href="https://github.com/otraVezLucho">GitHub</a>
                     </div>
                 </div>
             </div>
