Se sube LAB toDo con Bootstrap

--- a/agregar.html
+++ b/agregar.html
@@ -42,8 +42,19 @@
 
     <main>
         <ul class="list-group" id="manageDom">
-          
+          <!--  <li class="list-group-item">
+                <input class="form-check-input me-1" id="1CheckBox" type="checkbox" name="check">
+                <label class="form-check-label" for="1CheckBox">KHASJD</label>
+            </li>
+            -->
         </ul>
+        <form action="" id="formularioTarea">
+            <div class="input-group">
+                <textarea class="form-control" id="tareaNueva" aria-label="With textarea" placeholder="Ingrese una tarea" required></textarea>
+            </div>
+            <button type="submit" id="agregar" class="btn btn-outline-success agregarBoton">Agregar</button>
+            <button type="button" id="borrar" class="btn btn-outline-danger borrarBoton">Borrar Item</button>
+        </form>
     </main>
 
     <footer>
@@ -52,8 +63,10 @@
                 <a class="navbar-brand" href="#">Luis Villada</a>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link" href="#">LinkedIn</a>
-                        <a class="nav-link" href="#">GitHub</a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/luisvilladadev
+
+">LinkedIn</a>
+                        <a class="nav-link" href="https://github.com/otraVezLucho">GitHub</a>
                     </div>
                 </div>
             </div>
