--- a/tareas.html
+++ b/tareas.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="tareas.html">Tareas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Agregar</a>
+                            <a class="nav-link" href="agregar.html">Agregar</a>
                         </li>
 
                     </ul>
@@ -48,13 +48,7 @@
             </li>
             -->
         </ul>
-        <form action="" id="formularioTarea">
-            <div class="input-group">
-                <textarea class="form-control" id="tareaNueva" aria-label="With textarea" placeholder="Ingrese una tarea" required></textarea>
-            </div>
-            <button type="submit" id="agregar" class="btn btn-outline-success agregarBoton">Agregar</button>
-            <button type="button" id="borrar" class="btn btn-outline-danger borrarBoton">Borrar Item</button>
-        </form>
+        
     </main>
 
     <footer>
